# happymimi_recognition2

./: README.md  requirements.txt
happymimi_recognition_msgs/: CMakeLists.txt  package.xml
happymimi_recognition_msgs/action/: RecognitionProcessing.action
happymimi_recognition_msgs/srv/: RecognitionList.srv
happymimi_recognition_msgs2/: CMakeLists.txt  package.xml
happymimi_recognition_msgs2/action/: RecognitionProcessing.action
happymimi_recognition_msgs2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
happymimi_recognition_msgs2/install/happymimi_recognition_msgs2/share/happymimi_recognition_msgs2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
happymimi_recognition_msgs2/log/: latest_build
happymimi_recognition_msgs2/msgs/recognition_yolo/: DetectedObjects.msg
happymimi_recognition_msgs2/srv/: Depthmeter.srv  MultipleLocalize.srv  PositionEstimator.srv  RecognitionLocalize.srv
happymimi_recognition_msgs2/srv/recognition_yolo/: CheckObjects.srv  CheckPosition.srv  SelectPerson.srv
person_feature_extraction/: package.xml  setup.cfg  setup.py
person_feature_extraction/person_feature_extraction/: gpt2_exam_realsense.py  image_to_text.py  sample_clip.py
recognition_api/: README.md
recognition_api/yoloworld/: main.py  object_detector.py  test_module.py
recognition_launch/: README.md  package.xml  setup.cfg  setup.py
recognition_launch/launch/: normallaunch.py
recognition_processing/: package.xml  setup.cfg  setup.py
recognition_processing/launch/: recognition_processing.launch.py
recognition_processing/recognition_processing/: depthMask.py  pythonn_sample.py  recog_action_server.py  recognition_action_server.py  recognition_action_server_dev.py  recognition_opencv_publisher.py  recognition_tools.py  transitions_recognition.py
recognition_processing/recognition_processing/hand_raise_recognition/: hand_raise_recognition.py
recognition_startup/: package.xml  readme.md  setup.cfg  setup.py
recognition_startup/config/: packages.txt
recognition_startup/recognition_startup/: package_installer.py
recognition_yolo/: README.md  package.xml  setup.cfg  setup.py
recognition_yolo/recognition_yolo/: yolov11_publisher.py
three_dimensional_data_processing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
three_dimensional_data_processing/launch/: three_dimensional_data_processing.launch.py
three_dimensional_data_processing/src/: position_estimator.cpp
three_dimensional_data_processing/three_dimensional_data_processing/: position_estimation_dev.py  position_estimator.py
