<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>recognition_processing</name>
  <version>0.0.0</version>

  <description>Estimate the 3D position of an object</description>
  <maintainer email="c1103809@planet.kanazawa-it.ac.jp">mimi_orin</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <exec_depend>ros2launch</exec_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
